syntax = "proto3";
option go_package = "grpc";

service Loopd {
    rpc Setup (SetupRequest) returns (SetupResponse);
    rpc Teardown (TeardownRequest) returns (EmptyResponse);
}

message SetupRequest {
    string filename = 1;
}

message SetupResponse {
    string deviceName = 1;
}

message TeardownRequest {
    string deviceName = 1;
}

message EmptyResponse {
}